--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,19 @@
 server:
   port: 8080
 
+
 spring:
   data:
     mongodb:
       uri: ${MONGO_URL:mongodb://localhost:27017/dev}
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  endpoint:
+    health:
+      show-details: always
+logging:
+  config: ${LOGGING_CONFIG:classpath:logback.xml}
