--- a/helm/timer-app/templates/mongo.yaml
+++ b/helm/timer-app/templates/mongo.yaml
@@ -1,15 +1,4 @@
 apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mongo-pvc
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 256Mi
----
-apiVersion: v1
 kind: Service
 metadata:
   name: mongo
@@ -21,10 +10,12 @@ spec:
       targetPort: 27017
 ---
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: mongo
 spec:
+  serviceName: mongo
+  replicas: 4
   selector:
     matchLabels:
       app: mongo
@@ -32,6 +23,7 @@ spec:
     metadata:
       labels:
         app: mongo
+        selector: mongo
     spec:
       containers:
         - name: mongo
@@ -39,9 +31,15 @@ spec:
           ports:
             - containerPort: 27017
           volumeMounts:
-            - name: storage
+            - name: pvc
               mountPath: /data/db
-      volumes:
-        - name: storage
-          persistentVolumeClaim:
-            claimName: mongo-pvc
+              readOnly: false
+  volumeClaimTemplates:
+    - metadata:
+        name: pvc
+      spec:
+        accessModes:
+          - ReadWriteOnce
+        resources:
+          requests:
+            storage: 1Gi
