--- a/helm/timer-app/templates/timer.yaml
+++ b/helm/timer-app/templates/timer.yaml
@@ -32,4 +32,13 @@ spec:
           env:
             - name: MONGO_URL
               value: mongodb://mongo:27017/dev
+            - name: LOG_CTRL_FILE
+              value: "/logcontrol/logcontrol.json"
           imagePullPolicy: Always
+          volumeMounts:
+            - mountPath: /logcontrol
+              name: foo
+      volumes:
+        - name: foo
+          configMap:
+            name: logcontrol-configmap
