logcontrol json timer

--- a/helm/timer-app/templates/configmap.yaml
+++ b/helm/timer-app/templates/configmap.yaml
@@ -11,3 +11,6 @@ data:
         "severity": "info"
       }
     ]
+
+  application.properties: |
+    log.control.config.path = {{ include "timer.logControlConfigPath" . }}
